[gd_scene load_steps=2 format=2]

[ext_resource path="res://TalkRadius/TalkRadius.gd" type="Script" id=1]

[node name="TalkRadius" type="Area2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -50.3431
margin_top = -72.1452
margin_right = 56.6569
margin_bottom = -58.1452
text = "Press \"Z\" to talk."
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
[connection signal="input_event" from="." to="." method="_on_TalkRadius_input_event"]
